--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Radar</title>
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
-<body>
 
-    
+
+<body>
+    <div class="card">
+        <header class="card-header">
+        <p class="card-header-title">Event Radar
+            <i class="fa-solid fa-cloud-rain"></i>
+            <i class="fa-solid fa-sun"></i>
+            <i class="fa-solid fa-umbrella"></i>
+            <i class="fa-solid fa-snowflake"></i>
+        </p>
+        </header>
+    </div>
 </body>
+
 </html>
