--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@
 <body>
     <div class="card">
         <header class="card-header">
-        <p class="card-header-title">Event Radar
-            <i class="fa-solid fa-cloud-rain"></i>
-            <i class="fa-solid fa-sun"></i>
-            <i class="fa-solid fa-umbrella"></i>
-            <i class="fa-solid fa-snowflake"></i>
-        </p>
+            <p class="card-header-title">Event Radar
+                <i class="fa-solid fa-cloud-rain"></i>
+                <i class="fa-solid fa-sun"></i>
+                <i class="fa-solid fa-umbrella"></i>
+                <i class="fa-solid fa-snowflake"></i>
+            </p>
+                <div class="navbar-end">
+                    <nav>
+                        <ul>
+                            <li><a href="#City">City</a></li>
+                            <li><a href="#Weather">Weather</a></li>
+                            <li><a href="#Events">Events</a></li>
+                        </ul>
+                    </nav>
+                </div>
         </header>
     </div>
 </body>
