--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <link
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
 
 <body>
     <div class="card">
         <header class="card-header">
-            <p class="card-header-title">Event Radar
-                <i class="fa-solid fa-cloud-rain"></i>
-                <i class="fa-solid fa-sun"></i>
-                <i class="fa-solid fa-umbrella"></i>
-                <i class="fa-solid fa-snowflake"></i>
-            </p>
-                <div class="navbar-end">
-                    <nav>
-                        <ul>
-                            <li><a href="#City">City</a></li>
-                            <li><a href="#Weather">Weather</a></li>
-                            <li><a href="#Events">Events</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <p class="card-header-title">Event Radar</p>
+            <div>
+                <i class="fab-solid fa-cloud-rain"></i>
+                <i class="fab-solid fa-sun"></i>
+                <i class="fab-solid fa-umbrella"></i>
+                <i class="fab-solid fa-snowflake"></i>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="#City">City</a></li>
+                        <li><a href="#Weather">Weather</a></li>
+                        <li><a href="#Events">Events</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </div>
     <section class="section">
