added suggestion weather box

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </div>
                 <div class="control">
                     <button class="button is-primary" type="submit">Search</button>
+                    <div id="weatherSuggestion" class="notification"></div>
                 </div>
             </form>
             <div id="results" class="content"></div>
