updated some simple styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <section id="SearchBar">
         <div class="container">
-            <h1 class="title">Search for Events</h1>
+            <h1 id="Events" class="title">Search for Events</h1>
             <form id="searchForm" class="box">
                 <div class="field">
                     <label class="label" for="city">Enter City:</label>
