--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <div id="weatherSuggestion" class="notification"></div>
                 </div>
             </form>
+            <div id="cities-List"> </div>
             <div id="results" class="content"></div>
         </div>
     </section>
