fixed some small code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="control">
                         <button class="button is-primary" id="opener" type="submit">Search</button>
-                        <div  id="weatherSuggestion" class="notification"></div>
+                        <div  class="notification"></div>
                     </div>
                 </form>
                 <div id="cities-List"> </div>
