dealt with merge conflict

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="#City">Enter City</a></li>
                         <li><a href="#Weather">Weather</a></li>
-                        <li><a href="#results">Events</a></li>
+                        <li><a>Events</a></li>
                     </ul>
                 </nav>
             </div>
