fixed some js and got nav bar working

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
     <div>
     <!-- <button id="opener">Open Dialog</button> -->
     </div>
+    
+    <section id="Events" class="section">
+        <div class="container">
+            <h2 class="title">Events</h2>
+            <div id="events-content" class="content">
+                <!-- Events will be loaded here -->
+            </div>
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
